# Realtime-VoiceAgent-Avatar-Rag

./: .gitignore  README.md  opencode.md
Rag-Langchain/Semantic-Search-Chatbot/: .gitignore  README.md  Reusable_Strategies.md
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/: plan.md
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/: .env.example  .gitignore  config.yaml  pyproject.toml  rag_pipeline.py  requirements.txt
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/src/: cache.py  cli.py  config.py  pipeline.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/src/api/: models.py  routes.py  server.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/src/generation/: llm.py  prompt.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/src/ingestion/: chunker.py  loader.py  vectorstore.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/src/retrieval/: embedder.py  reranker.py  retriever.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/pipeline/tests/: conftest.py  test_generation.py  test_ingestion.py  test_pipeline.py  test_retrieval.py
Rag-Langchain/Semantic-Search-Chatbot/Rag_Backend/plan/: feature-rag-backend-1.md
Rag-Langchain/Semantic-Search-Chatbot/Rag_Frontend/RagChatbot_Frontend/: README.md  package-lock.json  package.json
Rag-Langchain/Semantic-Search-Chatbot/Rag_Frontend/RagChatbot_Frontend/src/: styles.css
Simple-Agent/: agent.py
Voice-Agent/Backend/: agent.py  livekit.toml  pyproject.toml
Voice-Agent/Frontend/app/api/token/: route.ts
Voice-Agent/Frontend/components/app/: app.tsx
(+2 files in other folders)
