[project]
name = "simple-agent"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "livekit-agents[silero,turn-detector,tavus]>=1.5.12",
    "livekit-plugins-deepgram>=1.5.12",
    "livekit-plugins-noise-cancellation>=0.2.5,<1.0.0",
    "livekit-plugins-openai>=1.5.12",
    "python-dotenv>=1.2.2",
    "aiohttp>=3.9.0",
]

